Uploaded image for project: 'Thrift'
  1. Thrift
  2. THRIFT-1481

Unix domain sockets in C++ do not support the abstract namespace

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Closed
    • Minor
    • Resolution: Fixed
    • 0.8
    • 0.9.2
    • C++ - Library
    • None
    • Patch Available

    Description

      Linux provides the ability to create a Unix Domain socket in an abstract namespace independent of the filesystem. A abstract namespace is specified by having the sockaddr_un.sun_path start with a NULL character.

      TServerSocket and TSocket both utilize snprintf when writing to the sockaddr_un structure, which stops at the first NULL character. Abstract namespace support can be added by using memcopy instead.

      Attachments

        1. linux_anon_namespace.patch
          3 kB
          Ben Craig

        Activity

          People

            ben.craig Ben Craig
            asadpanda Asad Saeed
            Votes:
            2 Vote for this issue
            Watchers:
            4 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: