THRIFT-1481 cpp: Unix domain sockets in C++ do not support the abstract namespace Patch: Ben Craig